# senseless_soccer2

./: .gitignore  CMakeLists.txt  README.md  build  debug.cpp  debug.hpp  rebuild
data/: DEEP_CENTER_ATTACKER.pos  DEEP_CENTER_ATTACKER_POSITIONS.pos  GOALKEEPER_POSITIONS.pos  LEFT_BACK_POSITIONS.pos  LEFT_CENTER_ATTACKER_POSITIONS.pos  LEFT_CENTER_BACK_POSITIONS.pos  LEFT_CENTER_MIDFIELDER_POSITIONS.pos  LEFT_MIDFIELDER_POSITIONS.pos  RIGHT_BACK_POSITIONS.pos  RIGHT_CENTER_ATTACKER_POSITIONS.pos  RIGHT_CENTER_BACK_POSITIONS.pos  RIGHT_CENTER_MIDFIELDER_POSITIONS.pos  RIGHT_MIDFIELDER_POSITIONS.pos
data/positions/: DEEP_CENTER_ATTACKER_POSITIONS.pos  GOALKEEPER_POSITIONS.pos  LEFT_BACK_POSITIONS.pos  LEFT_CENTER_ATTACKER_POSITIONS.pos  LEFT_CENTER_BACK_POSITIONS.pos  LEFT_CENTER_MIDFIELDER_POSITIONS.pos  LEFT_MIDFIELDER_POSITIONS.pos  RIGHT_BACK_POSITIONS.pos  RIGHT_CENTER_ATTACKER_POSITIONS.pos  RIGHT_CENTER_BACK_POSITIONS.pos  RIGHT_CENTER_MIDFIELDER_POSITIONS.pos  RIGHT_MIDFIELDER_POSITIONS.pos
src/: compile_commands.json  main.cpp  types.hpp
src/ball/: .ball.cpp.swp  ball.cpp  ball.cpp.autosave  ball.hpp  ball_animations.hpp  ball_factory.cpp  ball_factory.hpp  ballfactory.cpp  ballfactory.hpp
src/debug/: debug.cpp  debug.hpp  diagnostics.cpp  diagnostics.hpp
src/engine/: engine.cpp  engine.hpp  keyboardlistener.cpp  keyboardlistener.hpp
src/imgui/: imgui-SFML.cpp  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_widgets.cpp
src/joysticker/: aftertouch.cpp  aftertouch.hpp  sensicontroller.cpp  sensicontroller.hpp
src/match/: enterpitch.cpp  match.cpp  match.hpp  match_state.cpp  play.cpp  play.hpp  state.cpp  state.hpp
src/memory/: ballfactory.cpp  ballfactory.hpp  playerfactory.cpp  playerfactory.hpp
src/metrics/: metrics.cpp  metrics.hpp
src/pitch/: pitch.cpp  pitch.hpp  pitchwidget.cpp  pitchwidget.hpp
src/player/: player.cpp  player.hpp  player_animations.h  playerfactory.cpp  playerfactory.hpp
src/player/ai/: brain.cpp  brain.hpp  brain_idle.cpp  brainstate.cpp  brainstate.hpp  goto.cpp  goto.hpp  idle.cpp  idle.hpp  jump.cpp  jump.hpp  retrieve.cpp  retrieve.hpp
src/player/ai/attack/: dribble.cpp  dribble.hpp  pass.cpp  pass.hpp  receivepass.cpp  receivepass.hpp  shoot.cpp  shoot.hpp
src/player/ai/defend/: cover.cpp  cover.hpp  slide.cpp  slide.hpp
src/player/locomotion/: head.cpp  head.hpp  locomotion.cpp  locomotion.hpp  locomotion_slide.cpp  locomotionmanager.cpp  locomotionmanager.hpp  pursue.cpp  pursue.hpp  seek.cpp  seek.hpp  slide.cpp  slide.hpp  stand.cpp  stand.hpp
src/player/states/: jumping.cpp  jumping.hpp  player_state.cpp  run.cpp  run.hpp  running.cpp  running.hpp  sliding.cpp  sliding.hpp  stand.cpp  stand.hpp  standing.cpp  standing.hpp  state.cpp  state.hpp
src/team/: defend.cpp  defend.hpp  enterpitch.cpp  enterpitch.cpp.autosave  enterpitch.hpp  idle.hpp  kit.cpp  kit.hpp  lineup.cpp  lineup.hpp  state.cpp  state.hpp  team.cpp  team.hpp  team_enterpitch.cpp  team_idle.cpp  team_lineup.cpp  team_state.cpp
src/team/tactics/: formation.cpp  formation.hpp  position.cpp  position.hpp  positionfactory.cpp  positionfactory.hpp
